--- a/public/index.html
+++ b/public/index.html
@@ -15,12 +15,12 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
 </head>
 
-<body>
+<body class="body">
   <noscript>
     <strong>We're sorry but FLASH CARDS doesn't work properly without JavaScript enabled. Please enable it to
       continue.</strong>
   </noscript>
-  <div id="app"></div>
+  <div id="app" class="wrapper"></div>
   <!-- built files will be auto injected -->
 </body>
 
